# calculo-numerico

./: README.md  array_core.py  array_test.py  exceptions.py  linalg_test.py  matrix.py  pyproject.toml  regression.py  setup.py  vector.py
src/: __init__.py  config.py  typing.py
src/diffeq/: runge_kutta.py
src/eqroot/: core.py  limits.py
src/integral/: gauss_legendre.py  newton_cotes.py
src/interpolation/: core.py  gregory_newton.py  lagrange.py  natural_spline.py  newton.py  not_a_knot_spline.py  vandermonde.py
src/linalg/: cholesky.py  core.py  gauss_decomp.py  gauss_seidel.py  jacobi.py  krylov.py  ldlt.py  lu.py  sor.py
src/numerico/: __init__.py
src/numerico/eqroot/: __init__.py  bissection.py  core.py  limits.py
src/numerico/integral/: __init__.py  gauss_legendre.py  legendre.py  newton_cotes.py
src/numerico/interp/: __init__.py  core.py  gregory_newton.py  lagrange.py  natural_spline.py  newton.py  point_choice.py  splines.py  vandermonde.py
src/numerico/interpolation/: __init__.py  core.py  gregory_newton.py  lagrange.py  natural_spline.py  newton.py  not_a_knot_spline.py  vandermonde.py
src/numerico/linalg/: __init__.py  cholesky.py  core.py  gauss_decomp.py  gauss_seidel.py  jacobi.py  krylov.py  ldlt.py  lu.py  sor.py
src/numerico/regression/: __init__.py  linear.py  polynomial.py
src/regression/: linear.py  polynomial.py
test/: __main__.py  eqroot_test.py  integral_test.py  interp_test.py  linalg_test.py  linalg_time.py  regression_test.py
